external-crates/move/crates/move-compiler/tests/move_check/parser/function_return_type_missing.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
input_file: crates/move-compiler/tests/move_check/parser/function_return_type_missing.move
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_return_type_missing.move:3:14
  │
3 │     fun f(): { }
  │              ^
  │              │
  │              Unexpected '{'
  │              Expected a type name
